changed breakpoint so sceen-sm-max for full width article overlay to fix alignment on ipad

--- a/core/static/css/_homepage.scss
+++ b/core/static/css/_homepage.scss
@@ -251,22 +251,22 @@
     border-top: $border-grey;
   }
 
-  @media(max-width: $screen-md){
-    .row{
-      .col-sm-4{
-        .image-feature, .simple-feature{
-          height: 420px;
-        }
-      }
-    }
-  }
-
+  //@media(max-width: $screen-md){
+  //  .row{
+  //    .col-sm-4{
+  //      .image-feature, .simple-feature{
+  //        height: 420px;
+  //      }
+  //    }
+  //  }
+  //}
   @media(max-width: $screen-xs-max){
     .row{
       margin-bottom: 0px;
       & > [class*='col-'] {
         @include row-divider;
       }
+
       .col-sm-4{
         padding-left: 0px;
         padding-right: 0px;
@@ -300,7 +300,7 @@
   .overlay-feature{
     @include article-overlay;
 
-    @media(max-width: $screen-sm) {
+    @media(max-width: $screen-xs-max) {
       margin-left:-15px;
       margin-right:-15px;
       border-bottom: 0;
